modular test passed

--- a/integral/linear_interpolation.ipynb
+++ b/integral/linear_interpolation.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 382,
-   "id": "c3f25006",
+   "execution_count": 1,
+   "id": "06b5e2e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
-   "id": "e14e271c",
+   "execution_count": 2,
+   "id": "480bf0b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
     "     Otherwise you will get 0\n",
     "     \n",
     "Require:\n",
-    "    x, endpts must have the same dimension\n",
+    "    x, left_bound, right_bound must have the same dimension\n",
     "\n",
     "Parameters: \n",
     "    \n",
-    "        x: size n vector representing the index of point to check (Time dimension should be excluded)\n",
+    "        x: 1 x n vector representing the index of point to check (Time dimension should be excluded)\n",
     "\n",
     "        endpts: 2d (n x 2) array of index. First dimension is all the spatial dimensions, and second dimension are \n",
     "                left and right bound of the subdomain in terms of index\n",
@@ -42,21 +42,16 @@
     "        1 or 0, should be clear enough\n",
     "    \n",
     "    '''\n",
-    "    if len(x) != len(endpts[:, 0]):\n",
+    "    if len(x) != len(len(endpts[:, 0])):\n",
     "        raise ValueError(\"Parameter dimensions do not agree.\")\n",
     "        \n",
-    "    # for i in np.arange(len(endpts[:, 0])):\n",
-    "    #     if x[i] < endpts[i, 0] or x[i] > endpts[i, 1]:\n",
-    "    #         return 0\n",
-    "    # return 1\n",
-    "    ## Vectorized version\n",
     "    return int(all((x >= endpts[:, 0]) & (x <= endpts[:, 1])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
-   "id": "71c13447",
+   "execution_count": 3,
+   "id": "6d14d8eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +101,13 @@
     "    X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
     "    F = filterX(X, j, endpts, t)\n",
     "\n",
-    "    return np.sum(np.dot(W_F, F))"
+    "    return np.sum(np.multiply(W_F, F))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
-   "id": "ef1f4eb8",
+   "execution_count": 4,
+   "id": "63eadfd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,10 +135,6 @@
     "#     start and end index has different equation for weight, so we do those first\n",
     "    weight[0] = 1/2*(grid[start+1]-grid[start])\n",
     "    weight[-1] = 1/2*(grid[end]-grid[end-1])\n",
-    "    # for i in np.arange(end-start-2): \n",
-    "    #     weight[i+1] = 1/2*(grid[start+i+2]-grid[start+i])\n",
-    "    ##faster vectorize version\n",
-    "#   now we do the rest\n",
     "    weight[1:-1] = np.array([0.5 * (grid[(start+2):(end)] - grid[start:(end-2)])])\n",
     "    \n",
     "    return weight\n",
@@ -158,14 +149,14 @@
     "        index = [slice(None)]*(w+1)\n",
     "        index[-1] = np.newaxis\n",
     "        W_F = W_F[index] * np.array(weights[w])\n",
-    "    \n",
+    "        \n",
     "    return W_F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
-   "id": "9a06561b",
+   "execution_count": 5,
+   "id": "5a119a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
-   "id": "80b41ed3",
+   "execution_count": 6,
+   "id": "5170756e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +201,6 @@
     "    \n",
     "    theta_nonloc_p = np.zeros(num_t*num_x)\n",
     "    \n",
-    "    # for i in np.arange(theta_nonloc_p.length):\n",
-    "    #     this_t = i % num_t\n",
-    "    #     this_x = int(i/num_t)\n",
-    "        \n",
-    "    #     coefficient = indicator(this_x, endpts[k])\n",
-    "        \n",
-    "    #     integral = compute_integral(X, spatiotemporal_grid, this_t, j, endpts[kprime])\n",
-    "        \n",
-    "    #     theta_nonloc_p[i] = coefficient * integral\n",
-    "    #vectorized version\n",
     "    i = np.arange((theta_nonloc_p.length))\n",
     "    \n",
     "    this_t = i % num_t\n",
@@ -231,13 +212,12 @@
     "    \n",
     "    theta_nonloc_p = coefficient * integral\n",
     "    \n",
-    "        \n",
     "    return theta_nonloc_p"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd3b47fa",
+   "id": "ed5cb1e9",
    "metadata": {},
    "source": [
     "# Module test starts here."
@@ -245,8 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
-   "id": "cf571258",
+   "execution_count": 7,
+   "id": "51e5f1e8",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9da032d",
+   "id": "a8cec9bd",
    "metadata": {},
    "source": [
     "# The above cell shows that the 1D weight calculation is performing properly. We now test the computation to get the full weight."
@@ -277,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
-   "id": "1a7c291f",
+   "execution_count": 8,
+   "id": "80fc137f",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085447e3",
+   "id": "a504d12d",
    "metadata": {},
    "source": [
     "# Reshape Demo"
@@ -317,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0206d4f4",
+   "id": "7bea560f",
    "metadata": {},
    "source": [
     "Some interesting things I've found:\n",
@@ -327,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
-   "id": "c52947b1",
+   "execution_count": 9,
+   "id": "331fa206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,8 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
-   "id": "ee138e67",
+   "execution_count": 10,
+   "id": "72b23c0b",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +458,7 @@
        "0.0"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
-   "id": "dbce9468",
+   "execution_count": 11,
+   "id": "46b7722c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
-   "id": "d439b104",
+   "execution_count": 12,
+   "id": "15be61bd",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +500,7 @@
        "array([5.82842712, 0.17157288, 2.        ])"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87ad3401",
+   "id": "952999c0",
    "metadata": {},
    "source": [
     "# We now test the part where we filter data points in a subdomain out of X."
@@ -539,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2130282d",
+   "id": "76afd0b5",
    "metadata": {},
    "source": [
     "### We carry the assumption that the first d-2 axis are spatial, second last is time, and last is coords. "
@@ -547,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
-   "id": "35c59fb5",
+   "execution_count": 13,
+   "id": "a3aed945",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2064c04c",
+   "id": "eb75232b",
    "metadata": {},
    "source": [
     "### With Data matrix retrieved, we now filter it."
@@ -594,8 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
-   "id": "f06c87d8",
+   "execution_count": 14,
+   "id": "c5a5c304",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e713a48",
+   "id": "44d5488d",
    "metadata": {},
    "source": [
     "# Test 1D integral calculation against trapezoidal rule."
@@ -633,13 +613,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
-   "id": "ec941e8e",
+   "execution_count": 15,
+   "id": "d98b518f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate Data\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from scipy.io import loadmat\n",
+    "\n",
+    "# Construct a sample input for our program.\n",
+    "data = loadmat('pysindy-master/examples/data/burgers.mat')\n",
+    "time = np.ravel(data['t'])\n",
+    "x = np.ravel(data['x'])\n",
+    "X, T = np.meshgrid(x, time)\n",
+    "\n",
     "u = np.real(data['usol'])\n",
     "rmse = mean_squared_error(u, np.zeros(u.shape), squared=False)\n",
     "u = u + np.random.normal(0, rmse / 5.0, u.shape)\n",
@@ -652,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
-   "id": "a3cd085f",
+   "execution_count": 16,
+   "id": "8e2d11fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,8 +653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
-   "id": "7482bf64",
+   "execution_count": 17,
+   "id": "e8cff035",
    "metadata": {},
    "outputs": [
     {
@@ -679,21 +667,17 @@
    ],
    "source": [
     "# Construct reference value\n",
-    "X = u[0:90, 10, 0]\n",
-    "grid = spatiotemporal_grid[0:90, 10, 0]\n",
-    "ref = 0\n",
-    "for i in range(len(X)-1):\n",
-    "    ref += (X[i] + X[i+1])*(grid[i+1]-grid[i])/2\n",
+    "ref = np.trapz(U[endpts[0][0]:endpts[0][1], t, j], x=spatiotemporal_grid[endpts[0][0]:endpts[0][1], t, 0])\n",
     "\n",
     "# Apply our program\n",
     "obtained = compute_integral(U, spatiotemporal_grid, t, j, endpts)\n",
     "    \n",
-    "print(ref-obtained)"
+    "print(abs(ref-obtained))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a4377da8",
+   "id": "b5abe45a",
    "metadata": {},
    "source": [
     "# Test with 2D reaction diffusion equation"
@@ -701,8 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
-   "id": "dfb5fa1d",
+   "execution_count": 18,
+   "id": "7fe3e8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b917f4",
+   "id": "3e4a6a74",
    "metadata": {},
    "source": [
     "### Data matrix is U, spatiotemporal_grid is XYT"
@@ -818,8 +802,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
-   "id": "d7f69919",
+   "execution_count": 19,
+   "id": "cfd814c6",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +812,7 @@
        "(64, 64, 100, 2)"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,8 +823,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
-   "id": "6ca46d51",
+   "execution_count": 20,
+   "id": "8c237015",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +833,7 @@
        "(64, 64, 100, 3)"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,8 +844,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
-   "id": "d320b348",
+   "execution_count": 21,
+   "id": "487c7f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,29 +856,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
-   "id": "8d5f468a",
+   "execution_count": 22,
+   "id": "d6b6ad18",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-50.43143056828353"
-      ]
-     },
-     "execution_count": 403,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.226820456706384\n"
+     ]
     }
    ],
    "source": [
-    "compute_integral(U, XYT, t, j, endpts)"
+    "length = endpts[-1][1]-endpts[-1][0]\n",
+    "X = []\n",
+    "for i in range(length):\n",
+    "    res = np.trapz(U[endpts[0][0]:endpts[0][1], i, t, j], x=XYT[endpts[0][0]:endpts[0][1], i, t, 0])\n",
+    "    \n",
+    "    X.append(res)\n",
+    "    \n",
+    "ref = np.trapz(X, x=XYT[0, endpts[1][0]:endpts[1][1], t, 1])\n",
+    "print(ref)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c3857f",
+   "metadata": {},
+   "source": [
+    "## Validate Ref Value with another approach to 2D trapz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5c3a546f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.881784197001252e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "xarr = XYT[0:10, 0, 0, 0]\n",
+    "yarr = XYT[0, 0:10, 0, 1]\n",
+    "ref2 = 0\n",
+    "# area = np.zeros((len(xarr)-1)*(len(yarr)-1))\n",
+    "for i in np.arange(len(xarr)-1):\n",
+    "    for k in np.arange(len(yarr)-1):\n",
+    "        area = (xarr[i+1]-xarr[i])*(yarr[k+1]-yarr[k])\n",
+    "        weight = (U[i, k, t, j]+U[i+1, k, t, j]+U[i, k+1, t, j]+U[i+1, k+1, t, j])/4\n",
+    "        ref2 += area*weight\n",
+    "print(abs(ref-ref2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d8ca8d3",
+   "metadata": {},
+   "source": [
+    "## Compare result with our program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7ba007d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.881784197001252e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "obtained = compute_integral(U, XYT, t, j, endpts)\n",
+    "print(abs(ref-obtained))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbcc6fc3",
+   "id": "cbcfb5c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -916,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
