test unraid commit

--- a/main/nonlocal_liburary.ipynb
+++ b/main/nonlocal_liburary.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "50d12310",
    "metadata": {},
    "source": [
     "## Our Version"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ebde2ee1",
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25159c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aec457a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8a53ff88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6c2ec39d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +145,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8309f5fb",
    "metadata": {},
    "source": [
     "## Pysindy Version"
@@ -147,6 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "908ab6ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +207,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cab27cca",
    "metadata": {},
    "source": [
     "## Lorenz Attractor using foward euler"
@@ -207,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc510134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ce02651",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,12 +310,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ff41457",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9637935c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -315,7 +328,7 @@
    "hash": "043433d6b18bdeb8544c06540320f4c494e406f840db1fa6d3d1188f7786a55f"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
