add placeholder subdomain size warning

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2a2362a",
+   "id": "bf983b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,104 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f3c480f",
-   "metadata": {},
-   "source": [
-    "# Subdomain Iterator Demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "543c1cf6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def setup_subdomains(spatial_grid, K):\n",
-    "#     \"\"\"Setup subdomains for nonlocal computation\n",
-    "\n",
-    "#         Output format: A list of ndim elements containing lists of bounds of subdomains. In a 2D\n",
-    "#         case, an example would be [[2, 4, 6], [4]].\n",
-    "#     \"\"\"\n",
-    "# #       spatial grid is this 2D tensor that stores the grid. \n",
-    "# #       We split each dimension into K (mostly) equally sized subdomains, where K is a parameter. \n",
-    "# #       There will be a total of K^ndim subdomains \n",
-    "#     bounds = []\n",
-    "#     lengths = []\n",
-    "#     created = []\n",
-    "#     for i in np.arange(len(spatial_grid)):\n",
-    "# #         does spatio-temporal grid have to have the same number of points in each spatial dimension?\n",
-    "#         length = len(spatial_grid[i])\n",
-    "#         subdomain_length = length//K[i]\n",
-    "\n",
-    "#         remain = length % K[i]\n",
-    "#         size = [subdomain_length] * K[i]\n",
-    "#         for j in np.arange(remain):\n",
-    "#             size[j] += 1\n",
-    "#         bound = np.cumsum(size)\n",
-    "#         bounds.append(bound)\n",
-    "#     return bounds\n",
-    "# '''A generalization from https://stackoverflow.com/questions/29142417/4d-position-from-1d-index'''\n",
-    "# def nd_iterator(index, K):\n",
-    "#     '''\n",
-    "#     index: the 1D index of the nd item to recover\n",
-    "#     K: number of items per dimension, corresponding to each of the n dimensions.\n",
-    "    \n",
-    "#     return:\n",
-    "#     nd index of the item with 1D index to be \"index\"\n",
-    "#     '''\n",
-    "#     nd_index = [index % K[0]]\n",
-    "#     dividor = 1\n",
-    "#     remaining_index = index\n",
-    "#     for i in np.arange(len(K)-1):\n",
-    "#         remaining_index -= nd_index[i]*dividor\n",
-    "#         dividor *= K[i]\n",
-    "#         this_index = remaining_index // dividor % K[i+1]\n",
-    "#         nd_index.append(this_index)\n",
-    "#     return nd_index\n",
-    "\n",
-    "# def subdomain_iterator(index, bounds, K):\n",
-    "#     '''\n",
-    "#     index: the 1D index of the nd item to recover\n",
-    "#     bounds: subdomain dividor, in standard setup_subdomains format\n",
-    "#     K: number of items per dimension, corresponding to each of the n dimensions.\n",
-    "    \n",
-    "#     return:\n",
-    "#     boundary of that subdomain in standard nonlocal format.\n",
-    "#     '''\n",
-    "#     nd_index = nd_iterator(index, K)\n",
-    "#     bound = []\n",
-    "#     for i in np.arange(len(nd_index)):\n",
-    "#         if nd_index[i] == 0:\n",
-    "#             bound.append([0, bounds[i][0]-1])\n",
-    "#         else:\n",
-    "#             bound.append([bounds[i][nd_index[i]-1], bounds[i][nd_index[i]]-1])\n",
-    "    \n",
-    "#     return np.reshape(bound, (len(nd_index), 2))\n",
-    "\n",
-    "# def spatial_iterator(index, spatiotemporal_grid, K):\n",
-    "#     '''\n",
-    "#     bounds: subdomain dividor, in standard setup_subdomains format\n",
-    "#     nd_index: nd index of a specific subdomain, in nd_iterator standard output format.\n",
-    "    \n",
-    "#     return:\n",
-    "#     nd value of x at that index.\n",
-    "#     '''\n",
-    "#     nd_index = nd_iterator(index, K)\n",
-    "# #     append time point\n",
-    "#     nd_index.append(0)\n",
-    "    \n",
-    "# #     compute slicing index for the last dimension\n",
-    "#     num_dim = len(np.shape(spatiotemporal_grid))-1\n",
-    "# #     append last axis\n",
-    "#     nd_index.append(slice(0, num_dim-1, 1))\n",
-    "    \n",
-    "#     return spatiotemporal_grid[nd_index]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7cab597",
+   "id": "bb9585cf",
    "metadata": {},
    "source": [
     "# Nonlocal Full Module Test with 2D reaction diffusion equation"
@@ -124,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "add42c7d",
+   "id": "edaad741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "450dc23e",
+   "id": "c4d09020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a333068",
+   "id": "e53bd1bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +159,11 @@
     "    for i in np.arange(np.array(spatial_grid).ndim-1):\n",
     "#         does spatio-temporal grid have to have the same number of points in each spatial dimension?\n",
     "        length = np.shape(spatial_grid)[1]\n",
+    "    \n",
+    "        if length//K[i] < 2:\n",
+    "#             replace this with warning or break point\n",
+    "            print(\"Warning: too many subdomains created in axis\", i)\n",
+    "        \n",
     "        subdomain_length = length//K[i]\n",
     "\n",
     "        remain = length % K[i]\n",
@@ -505,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f41cb9",
+   "id": "b4e33adf",
    "metadata": {},
    "source": [
     "# Data matrix is U, spatiotemporal_grid is XYT"
@@ -514,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9abc7081",
+   "id": "46a2c0ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "283f4fe5",
+   "id": "23f15916",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f36583d",
+   "id": "d6395d4e",
    "metadata": {},
    "source": [
     "# Optimization:\n",
@@ -610,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "83c75154",
+   "id": "79932287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a9a08668",
+   "id": "79b26e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ad5b1776",
+   "id": "d5cb6bd4",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e575a827",
+   "id": "e417caea",
    "metadata": {},
    "outputs": [],
    "source": []
